datasets/corley/zookeeper/queries/long/2210.txt

src/zookeeper.c:286:9: warning: implicit declaration of function 'clock_gettime' is invalid in C99 [-Wimplicit-function-declaration]
  ret = clock_gettime(CLOCK_MONOTONIC, &ts);
        ^
src/zookeeper.c:286:23: error: use of undeclared identifier 'CLOCK_MONOTONIC'
  ret = clock_gettime(CLOCK_MONOTONIC, &ts);

